// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`active is true 1`] = `
<button
  className="btn_cookie active accept"
  onClick={[Function]}
  style={
    Object {
      "background": "#fafafa",
      "border": "1px solid #fafafa",
      "color": "#fafafa",
    }
  }
>
   
</button>
`;

exports[`disabled is true 1`] = `
<button
  className="btn_cookie neutral accept"
  onClick={[Function]}
  style={
    Object {
      "background": "#fafafa",
      "border": "1px solid #fafafa",
      "color": "#fafafa",
    }
  }
>
   
</button>
`;

exports[`text is \`ok, accept\` 1`] = `
<button
  className="btn_cookie neutral accept_modal"
  onClick={[Function]}
  style={
    Object {
      "background": "#fafafa",
      "border": "1px solid #fafafa",
      "color": "#fafafa",
    }
  }
>
   
  ok, accept
</button>
`;

exports[`text is accept 1`] = `
<button
  className="btn_cookie neutral accept"
  onClick={[Function]}
  style={
    Object {
      "background": "#fafafa",
      "border": "1px solid #fafafa",
      "color": "#fafafa",
    }
  }
>
   
</button>
`;

exports[`text is cookies policy 1`] = `
<button
  className="btn_cookie neutral decline_modal"
  onClick={[Function]}
  style={
    Object {
      "background": "#fafafa",
      "border": "1px solid #fafafa",
      "color": "#fafafa",
    }
  }
>
   
  cookies policy
</button>
`;

exports[`text is decline 1`] = `
<button
  className="btn_cookie neutral decline"
  onClick={[Function]}
  style={
    Object {
      "background": "#fafafa",
      "border": "1px solid #fafafa",
      "color": "#fafafa",
    }
  }
>
   
  decline
</button>
`;

exports[`theme is falsy 1`] = `
<button
  className="btn_cookie neutral accept"
  onClick={[Function]}
  style={
    Object {
      "background": "#aaa",
      "border": "1px solid #aaa",
      "color": "#aaa",
    }
  }
>
   
</button>
`;
